Update pregen and SIMD notes
- Describe the backpressure wait as a ceiling that ends when a chunk completes and the burst pool restore after pregeneration
- Replace the SIMD section: no vector noise kernels ship, array kernels only, and the five startup status lines